# ultra_indra

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  setup.py
cython/: tree_explorer.c  tree_explorer.html  tree_explorer.pxd  tree_explorer.pyx  tree_explorer_classless.c  tree_explorer_classless.html  tree_explorer_classless.pyx  tree_node.pyx
src/data/: image_dataclass.c  image_dataclass.pxd  image_dataclass.pyx  klein_dataclass.c  klein_dataclass.pyx
src/draw_utils/: draw_utils.c  draw_utils.html  draw_utils.pxd  draw_utils.pyx
src/fraction_manager/: __init__.py  fraction_manager.py  fraction_math.py
src/klein_composer/: .__init__.py.swp  .klein_composer.py.swp  __init__.py  klein_composer.py
src/klein_composer/cython/: .tree_explorer.pxd.swp  tree_explorer.c  tree_explorer.pxd
src/klein_composer/utils/: __init__.py  math_utils.py  utils.py
src/klein_dataclass/: klein_dataclass.pxd
src/models/: __init__.py  compute_model.py  fractal_model.py  klein_model.py  output_model.py
src/output_manager/: __init__.py  output_manager.py
src/recipe_manager/: __init__.py  recipe_manager.py
src/tree_compute/: setup.py  tree_explorer.py
src/tree_compute/cython/: tree_explorer.c  tree_explorer.pyx
src/tree_explorer/: tree_explorer.c  tree_explorer.html  tree_explorer.pyx
src/ultra_indra/: main.py
src/utils/: __init__.py  utils.py
tests/: conftest.py
tests/integration/: test_full_compute.py
tests/performance/: perf_klein_explorer.py
tests/unit/test_fractal_model/: test_fractal_model.py
tests/unit/test_klein_composer/: test_utils.py  (+2 more)
(+6 files in other folders)
