[tool.poetry]
name = "ultra-indra"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src/"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
cython = "^3.0.10"
black = "^24.4.2"
ruff = "^0.4.4"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
opencv-python = "^4.9.0.80"
scipy = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
